# LongVideoGuard

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  README_FINAL.md  apply_milestone3.py  pyproject.toml  requirements-colab.txt  requirements-stage5.txt  requirements-stage7.txt  requirements-stage9c.txt  streamlit_app.py
configs/: baseline.yaml
data/: README.md
docs/: BIG_TECH_INTERVIEW_QA.md  DECISIONS.md  EXPERIMENT_PLAN.md  GITHUB_CHECKLIST.md  NEXTQA_SETUP.md  PILOT_VIDEO_SETUP.md  PROJECT_PROPOSAL.md  RESUME_PROJECT_DESCRIPTION.md  STAGE4_ZERO_SHOT_EVALUATION.md  STAGE5A_FAILURE_ANALYSIS.md  STAGE5_1_SFT_DATA.md  STAGE5_2_BATCH_INSPECTION.md  STAGE5_3_LORA_OVERFIT.md  STAGE5_4_ADAPTER_EVALUATION.md  STAGE6A_2_QA_LORA_TRAINING.md  STAGE6A_LARGER_QA_DATA.md  STAGE6B_2_ANSWERABILITY_TRAINING.md  STAGE6B_2_STRUCTURED_TARGET_BATCH_FIX.md  STAGE6B_HARD_NEGATIVE_DATA.md  STAGE7A_QUERY_AWARE_SAMPLING.md  STAGE7B_SAMPLING_EVALUATION.md  STAGE7C_1_QUESTION_ROUTER.md  STAGE7C_2_COUNTERFACTUAL_EVALUATION.md  STAGE8_FROZEN_VIDEOQA.md  STAGE9A_FINAL_ERROR_ANALYSIS.md  STAGE9B_FINAL_REPORT.md  STAGE9C_STREAMLIT_DEMO.md  STAGE9D_FINAL_CHECKLIST.md  THREE_MINUTE_PROJECT_PITCH.md  ZERO_SHOT_BASELINE.md
notebooks/: 03_qwen3vl_zero_shot_colab.ipynb  README.md
scripts/: analyze_stage9_final_errors.py  build_nextqa_sft_data.py  build_nextqa_stage6a_data.py  build_nextqa_stage6b_hard_negatives.py  build_stage7_counterfactual_clips.py  build_stage7_frame_retrieval_cache.py  build_stage8_frozen_sampling_cache.py  build_stage9_final_report.py  download_nextqa_annotations.py  (+18 more)
(+58 files in other folders)
