[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "longvideoguard"
version = "0.1.0"
description = "Evidence-grounded evaluation and post-training of lightweight video-language models."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Kexin Ma"}
]
dependencies = [
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "pydantic>=2.8",
  "PyYAML>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]
vlm = [
  "torch>=2.4",
  "transformers>=4.57",
  "accelerate>=1.0",
  "qwen-vl-utils>=0.0.14",
]
train = [
  "datasets>=3.0",
  "peft>=0.13",
  "evaluate>=0.4",
]

[project.scripts]
longvideoguard = "longvideoguard.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
